# IMNetCore

./: build.gradle.kts  gradle.properties  settings.gradle.kts
DemoApp/: build.gradle.kts
DemoApp/src/main/: AndroidManifest.xml
DemoApp/src/main/java/com/teamhelper/imsdk/: FirstFragment.kt  MainActivity.kt  SecondActivity.kt  TestSubscriber.kt
DemoApp/src/main/res/navigation/: nav_graph.xml
DemoApp/src/main/res/values/: themes.xml
DemoApp/src/main/res/values-v23/: themes.xml
IMSDK/: build.gradle.kts
IMSDK/EpicHook/: build.gradle.kts
IMSDK/EpicHook/src/main/java/de/robv/android/xposed/: DexposedBridge.java
IMSDK/NetCore/: build.gradle.kts  proguard-rules.pro
IMSDK/NetCore/src/main/: AndroidManifest.xml
IMSDK/NetCore/src/main/cpp/: CMakeLists.txt  IMTcpSocketClient.h  IMUdpSocketClient.h  IMWebSocketClient.h  netcore.cpp  util.h
IMSDK/NetCore/src/main/cpp/base/: HttpHandlerRegistry.cpp  HttpHandlerRegistry.h  WebSocketHandler.cpp  WebSocketHandler.h
IMSDK/NetCore/src/main/cpp/cmake/: libfmt.cmake  libhv.cmake
IMSDK/NetCore/src/main/cpp/modules/: FindLibhv.cmake  FindOpenSSL.cmake  hv.cmake  libhv.cmake  openssl.cmake
IMSDK/NetCore/src/main/cpp/third/libhv/arm64-v8a/include/: hconfig.h
IMSDK/NetCore/src/main/java/com/teamhelper/imsdk/netcore/: NativeLib.kt  (+4 more)
IMSDK/NetHandler/: build.gradle.kts  consumer-rules.pro
IMSDK/Protocol/: build.gradle.kts
IMSDK/Protocol/src/main/java/com/teamhelper/imsdk/: BusinessEventRegistry.kt
IMSDK/Protocol/src/main/proto/: Protocol.proto
IMSDK/RTC/: build.gradle.kts
IMSDK/YukiReflection/: build.gradle.kts
IMSDK/YukiReflection/src/main/java/com/highcapable/yukireflection/: YukiReflection.kt
IMSDK/src/main/: AndroidManifest.xml
IMSDK/src/main/java/com/teamhelper/imsdk/: EventAnnotation.kt  EventAutoRegister.kt  EventLifecycleSubscriber.kt  EventRegistry.kt  IMInitializer.kt
IMUI/: build.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/teamhelper/imsdk/: SecondFragment.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+64 files in other folders)
